Image too small Error #23848

Closed
opened 2010-09-16 06:31:01 +02:00 by Layne Hall · 13 comments

%%%Hey Fellas, r31878 win xp nvid 9600gt

I was able to grab a screen shot of the Image too small freeze while I was in the process of rendering a smoke test. The error keeps repeating for me as I add a material and texture to the domain cube. thanks again%%%

%%%Hey Fellas, r31878 win xp nvid 9600gt I was able to grab a screen shot of the Image too small freeze while I was in the process of rendering a smoke test. The error keeps repeating for me as I add a material and texture to the domain cube. thanks again%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member
%%%Closed duplicate http://projects.blender.org/tracker/index.php?func=detail&aid=23845&group_id=9&atid=498%%%
Member

%%%Hrm, I'm unable to check this. Doing anything with it results in a run-time check failure: stack around the variable 'out_len' was corrupted in pointcache.c (line 670 on bake or 807) on reopening after first failure). Assigning to Janne for further checking.%%%

%%%Hrm, I'm unable to check this. Doing anything with it results in a run-time check failure: stack around the variable 'out_len' was corrupted in pointcache.c (line 670 on bake or 807) on reopening after first failure). Assigning to Janne for further checking.%%%
Member

%%%I did get the error one time, but now I can't reproduce it however much I try. Adding a volume material and volume data texture goes fine for me, although the texture preview shows nothing most of the time. Rendering doesn't give any errors either (except that the smoke is tilted 90 degrees since the domain cube is rotated).

I also couldn't reproduce the run-time check failure that Nathan got at all.%%%

%%%I did get the error one time, but now I can't reproduce it however much I try. Adding a volume material and volume data texture goes fine for me, although the texture preview shows nothing most of the time. Rendering doesn't give any errors either (except that the smoke is tilted 90 degrees since the domain cube is rotated). I also couldn't reproduce the run-time check failure that Nathan got at all.%%%
Author

%%%It seem that turning off the compositing and sequencer pipelines, when not in use has cut down on the number of freezes drastically. At times it was getting so bad I would have to add an object or material-save-then-render-freeze-restart and repeat.

thanks again %%%

%%%It seem that turning off the compositing and sequencer pipelines, when not in use has cut down on the number of freezes drastically. At times it was getting so bad I would have to add an object or material-save-then-render-freeze-restart and repeat. thanks again %%%
Member
%%%Potential duplicate: https://projects.blender.org/tracker/index.php?func=detail&aid=23843&group_id=9&atid=498%%%
Author

%%%Howdy Folks,

Ok I am including a blend file called "cube"
I have been able to recreate the image to small error on demand now.

Open the file
add a diffuse color
render
close the "render in new window" image by clicking x-icon upper right hand corner-it should now freeze.
If you do no get the "image too small error" repeat render-close untill you do "sometimes it takes a few times"
reopen the cube file
add diffuse color
then jump to render panel
under dimensions you will see that its set
to "render presets"
change it to whatever resolution you want
then render and that seems to resolve the freeze issue
"image to small"

so it seems it doesn't like to render with a material when the render preset dropdown is set at "render presets"

also sorry I was wrong about it being the compositor-sequencer issue

thanks again
%%%

%%%Howdy Folks, Ok I am including a blend file called "cube" I have been able to recreate the image to small error on demand now. Open the file add a diffuse color render close the "render in new window" image by clicking x-icon upper right hand corner-it should now freeze. If you do no get the "image too small error" repeat render-close untill you do "sometimes it takes a few times" reopen the cube file add diffuse color then jump to render panel under dimensions you will see that its set to "render presets" change it to whatever resolution you want then render and that seems to resolve the freeze issue "image to small" so it seems it doesn't like to render with a material when the render preset dropdown is set at "render presets" also sorry I was wrong about it being the compositor-sequencer issue thanks again %%%
Member

%%%Right, I can now redo. Thanks for finding out! Time to set breakpoints and figure out what really is going on :) Reassigning to myself for now.%%%

%%%Right, I can now redo. Thanks for finding out! Time to set breakpoints and figure out what really is going on :) Reassigning to myself for now.%%%
Member
%%%Closed duplicate of https://projects.blender.org/tracker/?func=detail&aid=23600&group_id=9&atid=498%%%
Member

%%%Thanks for the recreation steps. A temporary fix is now committed! The real reason is probably somewhere deep in the window manager code, which still has a lot of problems with stuff, so I'm closing the report and adding this as a reference link to the todo-list.%%%

%%%Thanks for the recreation steps. A temporary fix is now committed! The real reason is probably somewhere deep in the window manager code, which still has a lot of problems with stuff, so I'm closing the report and adding this as a reference link to the todo-list.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Going through old UI ToDo tasks - this looks like a GPU context switching issue, which was entirely reworked during 2.8. So I think this was fixed by now, so marking the ToDo item as done.

Going through old UI ToDo tasks - this looks like a GPU context switching issue, which was entirely reworked during 2.8. So I think this was fixed by now, so marking the ToDo item as done.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#23848
No description provided.