Temporary fix for [#23848] Image too small Error * This should be fixed properly later when general window close/resize problems in the todo list are tackled.